<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:visibility="visible"
    android:screenOrientation="portrait"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/whitetowerheader"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level1"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/greece_2711794_1280" />

    <RadioGroup
        android:id="@+id/groupMultiple_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.063">

        <RadioButton
            android:id="@+id/multipleoption1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1_1"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/multipleoption1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1_2"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/multipleoption1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1_3"
            android:textColor="@color/black" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:visibility="visible"
        android:onClick="onClick1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupMultiple_1"
        app:layout_constraintVertical_bias="0.173" />

</androidx.constraintlayout.widget.ConstraintLayout>

